# scom-migrator

./: .gitignore  LICENSE  NATI.test.xml  README.md  STATIC_WEB_APPS.md  app.py  check_types.py  investigate_gap.py  nati_output.json  pyproject.toml  requirements-azure.txt  requirements.txt  run_web.py  startup.txt  staticwebapp.config.json  test_coverage.py  test_output.json  trace_pipeline.py
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  feedback.md
.github/workflows/: azure-static-web-apps-icy-wave-02c4e6b03.yml  azure-static-web-apps-jolly-plant-09ce86a0f.yml  azure-static-web-apps.yml
api/: function_app.py  requirements.txt
api/analyze/: __init__.py  function.json
api/download/: __init__.py  function.json
api/scom_migrator/: __init__.py  analyzer.py  cli.py  generator.py  mapper.py  models.py  parser.py  web.py
frontend/: index.html  portfolio.html
samples/: Microsoft.SQLServer.Core.Library.mpb  Microsoft.SQLServer.Core.Views.mp  Microsoft.SQLServer.Core.WebDashboards.mp  Microsoft.SQLServer.IS.Windows.Views.mp  Microsoft.SQLServer.IS.Windows.mpb  Microsoft.SQLServer.Visualization.Library.mpb  Microsoft.SQLServer.Windows.Discovery.mpb  Microsoft.SQLServer.Windows.Monitoring.mpb  Microsoft.SQLServer.Windows.Views.mpb  Sample.Windows.Monitoring.xml
src/scom_migrator/: __init__.py  analyzer.py  generator.py  mapper.py  models.py  parser.py  web.py
tests/: test_analyzer.py  test_generator.py  test_parser.py
